# UnixCommands

./: .gitignore  CMakeLists.txt  README.md
DOCS/: README.md
src/ls/: ls.c
src/wc/: .gdb_history  wc.c
